--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
 /* Style the body */
 body {
-  font-family: Arial;
+  font-family: "Gill Sans", sans-serif;
   margin: 0;
 }
 
@@ -42,7 +42,7 @@ body {
 
 /* Change color on hover */
 .navbar a:hover {
-  background-color: #ddd;
+  background-color: #ffffff;
   color: black;
 }
 
@@ -98,9 +98,9 @@ body {
 
 <!-- Navigation Bar -->
 <div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="home.html">Home</a>
+  <a href="#">Projecten</a>
+  <a href="#">Tutorials</a>
   <a href="#">Link</a>
   <a href="#">Link</a>
 </div>
