--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@ body {
 /* Style the navigation bar links */
 .navbar a {
   color: white;
-  padding: 35px 14px;
+  padding: 40px 14px;
   text-decoration: none;
   text-align: center;
   width: 300px;
+  margin: auto;
 }
 
 /* Change color on hover */
@@ -92,17 +93,18 @@ body {
 <body>
 <!-- Header -->
 <div class="header">
-  <h1>My Website</h1>
-  <p>With a <b>flexible</b> layout.</p>
+    <h1>My Website</h1>
+    <p>With a <b>flexible</b> layout.</p>
 </div>
 
 <!-- Navigation Bar -->
 <div class="navbar">
-  <a href="home.html">Home</a>
-  <a href="#">Projecten</a>
-  <a href="#">Tutorials</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="index.html">Home</a>
+  <a href="pages/projecten.html">Projecten</a>
+  <a href="pages/weetjes.html">Weetjes</a>
+  <a href="pages/tutorials.html">Tutorials</a>
+  <a href="pages/contact.html">Contact</a>
+  <a href="pages/overons.html">Over ons</a>
 </div>
 
 <!-- The flexible grid (content) -->
@@ -135,7 +137,7 @@ body {
 
 <!-- Footer -->
 <div class="footer">
-  <h2>Footer</h2>
+    <h2>Footer</h2>
 </div>
 
 </body>
