kleuren aangepast en titels aangepast

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 .header {
   padding: 60px;
   text-align: center;
-  background: #E67E22;
+  background: #00979D;
   color: white;
   height: 200px;
 }
@@ -27,7 +27,7 @@ body {
 /* Style the top navigation bar */
 .navbar {
   display: flex;
-  background-color: #00979D;
+  background-color: #E67E22;
   height: 100px;
 }
 
@@ -57,7 +57,7 @@ body {
 /* Sidebar/left column */
 .side {
   flex: 30%;
-  background-color: #DCAC99;
+  background-color: #00979D;
   padding: 20px;
 }
 
@@ -93,7 +93,7 @@ body {
 <body>
 <!-- Header -->
 <div class="header">
-    <h1>My Website</h1>
+    <h1>Home</h1>
     <p>With a <b>flexible</b> layout.</p>
 </div>
 
