--- a/pages/weetjes.html
+++ b/pages/weetjes.html
@@ -93,7 +93,7 @@ body {
 <body>
 <!-- Header -->
 <div class="header">
-    <h1>My Website</h1>
+    <h1>Weetjes</h1>
     <p>With a <b>flexible</b> layout.</p>
 </div>
 
