--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,91 +4,7 @@
 <title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-/* Style the body */
-body {
-  font-family: "Gill Sans", sans-serif;
-  margin: 0;
-}
-
-/* Header/logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #E67E22;
-  color: white;
-  height: 200px;
-}
-
-/* Style the top navigation bar */
-.navbar {
-  display: flex;
-  background-color: #00979D;
-  height: 100px;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  color: white;
-  padding: 40px 14px;
-  text-decoration: none;
-  text-align: center;
-  width: 300px;
-  margin: auto;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ffffff;
-  color: black;
-}
-
-/* Column container */
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  flex: 30%;
-  background-color: #DCAC99;
-  padding: 20px;
-}
-
-/* Main column */
-.main {
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #ffffff;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #e7aa03;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row, .navbar {   
-    flex-direction: column;
-  }
-}
-</style>
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <!-- Header -->
