--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,17 +37,23 @@
     <div class="fakeimg" style="height:60px;">Image</div>
   </div>
   <div class="main">
-    <h2>TITLE HEADING</h2>
+    <h2>Over ons</h2>
     <h5>Title description, Dec 7, 2017</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <form>
+      <label for="naam">Naam:</label><br>
+      <input type="text" id="naam" name="naam"><br>
+      <label for="onderwerp">Last name:</label><br>
+      <input type="text" id="onderwerp" name="onderwerp">
+    </form>
     <br>
     <h2>TITLE HEADING</h2>
     <h5>Title description, Sep 2, 2017</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    
+    <div style="width: 100%"><iframe width="100%" height="200" src="https://maps.google.com/maps?width=100%&height=51&hl=nl&q=Onderwijsboulevard%203%2C%205223%20DE%20's-Hertogenbosch+(Interweb%20of%20things)&ie=UTF8&t=&z=14&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/nl/maak-een-google-map/">Maak een Google Map</a> van <a href="https://www.mapsdirections.info/nl/">Nederland Kaart</a></iframe></div><br />
   </div>
 </div>
 
