--- a/pages/overons.html
+++ b/pages/overons.html
@@ -25,7 +25,7 @@
 
 <!-- The flexible grid (content) -->
 <div class="row">
-  <div class="side">
+  <div class="leftSide">
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
