--- a/pages/overons.html
+++ b/pages/overons.html
@@ -24,39 +24,49 @@
 </div>
 
 <!-- The flexible grid (content) -->
+<!--
+  Over Oscar
+-->
 <div class="row">
   <div class="leftSide">
     <h2>Over Oscar de Laat</h2>
     <h5>Foto van mij:</h5>
     <img class="photoOfUs" src="">
     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
   </div>
+
+  <!--
+    Over Jari
+  -->
   <div class="middle">
     <h2>Over Jari Graus</h2>
     <h5>Foto van mij:</h5>
-    <img class="photoOfUs" src="">
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
+    <img class="photoOfUs" src="../media/photoJari.JPG" alt="Photo of Jari">
+    <p>
+      Hoi,
+      <br>
+      Ik ben Jari Graus, ik ben 19 jaar oud.
+      <br>
+      Ik ben een optimistisch persoon en houd ervan om met mensen te kletsen, maar ook om soms even alleen te zijn.
+      <br>
+      Ook houd ik van buiten zijn en een lekker stuk te wandelen of fietsen.
+      <br>
+      Zwemmen ben ik ook een ontzettend groot fan van.
+      <br>
+      Als verdere hobby heb ik Piano spelen. Dit doe ik nu al voor ongeveer 11 jaar.
+      <br>
+      Verder woon ik in 's-Hertogenbosch en doe ik de opleiding applicatie en mediaontwikkelaar aan het Koning Willem I College.
+    </p>
   </div>
+
+  <!--
+    Over Pedro
+  -->
   <div class="rightSide">
     <h2>Over Pedro Frunt</h2>
     <h5>Foto van mij:</h5>
     <img class="photoOfUs" src="">
     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
   </div>
 </div>
 
