--- a/pages/weetjes.html
+++ b/pages/weetjes.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="../css/style.css">
+  <title>Page Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <!-- Header -->
 <div class="header">
     <h1>Weetjes</h1>
-    <p>With a <b>flexible</b> layout.</p>
+    <p>Dingen die je moet weten over Arduino!</p>
 </div>
 
 <!-- Navigation Bar -->
@@ -25,35 +25,75 @@
 
 <!-- The flexible grid (content) -->
 <div class="row">
-  <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
-  </div>
+  <!-- Main -->
   <div class="main">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Dec 7, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Sep 2, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <h1>5 weetjes die je altijd al wilde weten over Arduino</h1>
+    <!-- Weetje 1-->
+    <h2>1. Wat is Arduino?</h2>
+    <p>
+      In technische termen, een Arduino is een microcontroller met één board. Een printplaat van creditcardformaat met invoer- 
+      en uitvoer pins die andere elektronische componenten met draden kunnen aansluiten met weerstanden, LED-diodes, motoren, 
+      ventilatoren, knoppen, luidsprekers, sensoren en meer!
+      Het is in wezen een soort Lego Mindstorms voor volwassenen. Het Arduino-bord is het brein en je kunt de verschillende 
+      componenten mixen en matchen zoals je wilt, wat je maar wilt, en vervolgens het bord programmeren om outputs te produceren
+      op basis van inputs (druk bijvoorbeeld op een knop om een ​​motor in te schakelen).
+    </p>
+    <!-- Weetje 2-->
+    <h2>2. Wat betekent "Arduino"?</h2>
+    <p>
+      Tijdens de eerste dagen van het project, voordat het van Wiring was afgesplitst, kwamen de oprichters vaak bijeen in een 
+      bar in Ivrea, genaamd Bar di Re Arduino. De bar zelf is vernoemd naar Arduin van Ivrea, een Italiaanse edelman die
+      tussen 1002 en 1014 regeerde als de gekozen koning van Italië. Ter ere van deze ontmoetingsplaats kreeg het project de
+      naam Arduino.
+    </p>
+    <!-- Weetje 3-->
+    <h2>3. Wat kan ik maken met Arduino?</h2>
+    <p>
+      Allerlei dingen - the sky's the limit! Er zijn natuurlijk heel veel projecten Hier is een korte samenvatting van wat
+      mogelijk is. Mensen hebben Arduino gebruikt om muziek te maken, te spelen en uit te breiden, zelfs tot het punt van een 
+      kamerplant die 'zingt' wanneer ze wordt aangeraakt. Mensen hebben Arduino gebruikt om hun huizen op te fleuren: garagedeuropeners,
+      alarmen voor huisbeveiliging en zelfs automatische voerautomaten voor huisdieren. En als je echt goed wilt worden, kun je zelfs 
+      volledig functionele robots bouwen. Wanneer je eenmaal begrijpt hoe alle basiscomponenten werken, moet je ze alleen nog op een 
+      creatieve manier samenstellen. Bekijk inspirerende Arduino-projecten voor meer ideeën op 
+      https://www.makeuseof.com/tag/6-coolest-arduino-projects-youll-ever-see/.
+    </p>
+    <!-- Weetje 4-->
+    <h2>4. Wat is Arduino?</h2>
+    <p>
+      6. Welke talen kan ik gebruiken met Arduino?
+      Wanneer alle elektronische componenten zijn verbonden, moet je nog steeds de logica van het Arduino-bord programmeren om iets te 
+      doen. Daarvoor heb je een programmeertaal nodig. De officiële Arduino-taal is een vereenvoudigde afgeleide van C / C ++, dus als
+       je daar ervaring mee hebt, dan zou je goed moeten zijn. We raden u aan de officiële Arduino-taal te gebruiken als u daartoe in 
+       staat bent, omdat dit volledige dekking van de Arduino-API en het platform garandeert. Maar er zijn andere talen beschikbaar, 
+       waaronder C #, Python en een paar visuele scripttalen die geweldig zijn als je absoluut geen programmeerervaring hebt.
+    </p>
+    <!-- Weetje 5-->
+    <h2>5. Wat is Arduino?</h2>
+    <p>
+      9. Wat zit er in een Arduino Starter Kit?
+Naast het eigenlijke Arduino-bord bevat een starterkit meestal:
+
+Breadbord
+LED lichten
+Jumper draden
+USB-A-naar-USB-B-kabel
+Condensatoren en weerstanden
+Startprojecten en gidsen
+Afhankelijk van hoe duur de kit is, kan deze ook een aantal van de volgende elementen bevatten: versnellingsmeters, motoren, schakelaars, displays, potentiometers, transistors, knoppen en registers.
+    </p>
   </div>
 </div>
 
 <!-- Footer -->
+<!-- 
+    Vlaggetje NL add achter Nederland
+    Social media logos add
+-->
 <div class="footer">
-    <h2>Footer</h2>
+    <h2>
+      Nederland <br>
+      &copy 2020 Project Oscar, Jari en Pedro IO1C4
+    </h2>
 </div>
 
 </body>
