--- a/pages/weetjes.html
+++ b/pages/weetjes.html
@@ -70,16 +70,16 @@
     <!-- Weetje 5-->
     <h2>5. Wat is Arduino?</h2>
     <p>
-      9. Wat zit er in een Arduino Starter Kit?
-Naast het eigenlijke Arduino-bord bevat een starterkit meestal:
+            9. Wat zit er in een Arduino Starter Kit?
+            Naast het eigenlijke Arduino-bord bevat een starterkit meestal:
 
-Breadbord
-LED lichten
-Jumper draden
-USB-A-naar-USB-B-kabel
-Condensatoren en weerstanden
-Startprojecten en gidsen
-Afhankelijk van hoe duur de kit is, kan deze ook een aantal van de volgende elementen bevatten: versnellingsmeters, motoren, schakelaars, displays, potentiometers, transistors, knoppen en registers.
+            Breadbord<br>
+            LED lichten<br>
+            Jumper draden<br>
+            USB-A-naar-USB-B-kabel<br>
+            Condensatoren en weerstanden<br>
+            Startprojecten en gidsen<br>
+            Afhankelijk van hoe duur de kit is, kan deze ook een aantal van de volgende elementen bevatten: versnellingsmeters, motoren, schakelaars, displays, potentiometers, transistors, knoppen en registers.
     </p>
   </div>
 </div>
