--- a/pages/overons.html
+++ b/pages/overons.html
@@ -31,8 +31,10 @@
   <div class="leftSide">
     <h2>Over Oscar de Laat</h2>
     <h5>Foto van mij:</h5>
-    <img class="photoOfUs" src="">
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <img class="photoOfUs" src="../images/oscar.jpg">
+    <p> Goededag,<br>
+        Mijn naam is Oscar de Laat, 19 jaar oud.<br>
+        Ik ben </p>
   </div>
 
   <!--
