--- a/pages/overons.html
+++ b/pages/overons.html
@@ -34,7 +34,10 @@
     <img class="photoOfUs" src="../images/oscar.jpg">
     <p> Goededag,<br>
         Mijn naam is Oscar de Laat, 19 jaar oud.<br>
-        Ik ben </p>
+        Ik woon in Den Bosch, binnenkort ga ik verhuizen naar Rosmalen.<br>
+        Mijn hobbies zijn: fitness, hockey, piano, lezen, schaken, koken, tafeltennis en gamen.<br>
+        Ik doe de opleiding Applicatie- en mediaontwikkelaar op niveau 4 aan het Koning Willem I College.
+    </p>
   </div>
 
   <!--
