--- a/pages/weetjes.html
+++ b/pages/weetjes.html
@@ -85,14 +85,10 @@
 </div>
 
 <!-- Footer -->
-<!-- 
-    Vlaggetje NL add achter Nederland
-    Social media logos add
--->
 <div class="footer">
     <h2>
-      Nederland <br>
-      &copy 2020 Project Oscar, Jari en Pedro IO1C4
+      Nederland <img class="nlvlag" src="../images/nlvlag.png"><br>
+      &copy 2020 Project Oscar, Jari en Pedro IO1C4 <img class="socialMedia" src="../images/socialmedia.png">
     </h2>
 </div>
 
