--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -53,7 +53,10 @@
 
 <!-- Footer -->
 <div class="footer">
-    <h2>Footer</h2>
+  <h2>
+    Nederland <img class="nlvlag" src="../images/nlvlag.png"><br>
+    &copy 2020 Project Oscar, Jari en Pedro IO1C4 <img class="socialMedia" src="../images/socialmedia.png">
+  </h2>
 </div>
 
 </body>
