--- a/pages/overons.html
+++ b/pages/overons.html
@@ -70,8 +70,18 @@
   <div class="rightSide">
     <h2>Over Pedro Frunt</h2>
     <h5>Foto van mij:</h5>
-    <img class="photoOfUs" src="">
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <img class="photoOfUs" src="../media/photoPedro.jpg">
+    <p>
+      Hoi,
+      <br>
+      Ik ben Pedro Frunt, ik ben 19 jaar oud.
+      <br>
+      Ik hou van games, videos bekijken en met mensen praten. Maar natuurlijk ook van Arduino.
+      <br>
+      Hardlopen doe ik ook wel eens als beweging.
+      <br>
+      Berlicum is het dorp waar ik woon. Koning Willem 1 College is de school waar ik studeer.
+    </p>
   </div>
 </div>
 
