--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <!-- Footer -->
 <div class="footer">
   <h2>
-    Nederland <img class="nlvlag" src="../images/nlvlag.png"><br>
-    &copy 2020 Project Oscar, Jari en Pedro IO1C4 <img class="socialMedia" src="../images/socialmedia.png">
+    Nederland <img class="nlvlag" src="images/nlvlag.png"><br>
+    &copy 2020 Project Oscar, Jari en Pedro IO1C4 <img class="socialMedia" src="images/socialmedia.png">
   </h2>
 </div>
 
