--- a/pages/overons.html
+++ b/pages/overons.html
@@ -70,7 +70,7 @@
   <div class="rightSide">
     <h2>Over Pedro Frunt</h2>
     <h5>Foto van mij:</h5>
-    <img class="photoOfUs" src="../media/photoPedro.jpg">
+    <img class="photoOfUs photoPedro" src="">
     <p>
       Hoi,
       <br>
