--- a/pages/overons.html
+++ b/pages/overons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Over ons</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../css/overons.css">
@@ -10,7 +10,7 @@
 <!-- Header -->
 <div class="header">
     <h1>Over ons</h1>
-    <p>With a <b>flexible</b> layout.</p>
+    <p>Informatie over ons</p>
 </div>
 
 <!-- Navigation Bar -->
@@ -87,7 +87,10 @@
 
 <!-- Footer -->
 <div class="footer">
-    <h2>Footer</h2>
+  <h2>
+    Nederland <img class="nlvlag" src="../images/nlvlag.png"><br>
+    &copy 2020 Project Oscar, Jari en Pedro IO1C4 <img class="socialMedia" src="../images/socialmedia.png">
+  </h2>
 </div>
 
 </body>
