--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,8 +25,7 @@
 
 <!-- The flexible grid (content) -->
   <div class="main">
-    <h2>Over ons</h2>
-    <h5>Title description, Dec 7, 2017</h5>
+    <h2>Over ons</h2>>
     <form>
       <label for="naam">Naam:</label><br>
       <input type="text" id="naam" name="naam"><br>
