--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,7 @@
 
 <!-- The flexible grid (content) -->
   <div class="main">
-    <h2>Over ons</h2>>
+    <h2>Over ons</h2>
     <form>
       <label for="naam">Naam:</label><br>
       <input type="text" id="naam" name="naam"><br>
