--- a/pages/weetjes.html
+++ b/pages/weetjes.html
@@ -68,9 +68,8 @@
        waaronder C #, Python en een paar visuele scripttalen die geweldig zijn als je absoluut geen programmeerervaring hebt.
     </p>
     <!-- Weetje 5-->
-    <h2>5. Wat is Arduino?</h2>
+    <h2>5. Wat zit er in een Arduino Starter Kit?</h2>
     <p>
-            9. Wat zit er in een Arduino Starter Kit?
             Naast het eigenlijke Arduino-bord bevat een starterkit meestal:
 
             Breadbord<br>
