--- a/pages/weetjes.html
+++ b/pages/weetjes.html
@@ -58,14 +58,13 @@
       https://www.makeuseof.com/tag/6-coolest-arduino-projects-youll-ever-see/.
     </p>
     <!-- Weetje 4-->
-    <h2>4. Wat is Arduino?</h2>
+    <h2>6. Welke talen kan ik gebruiken met Arduino?</h2>
     <p>
-      6. Welke talen kan ik gebruiken met Arduino?
       Wanneer alle elektronische componenten zijn verbonden, moet je nog steeds de logica van het Arduino-bord programmeren om iets te 
       doen. Daarvoor heb je een programmeertaal nodig. De officiële Arduino-taal is een vereenvoudigde afgeleide van C / C ++, dus als
        je daar ervaring mee hebt, dan zou je goed moeten zijn. We raden u aan de officiële Arduino-taal te gebruiken als u daartoe in 
        staat bent, omdat dit volledige dekking van de Arduino-API en het platform garandeert. Maar er zijn andere talen beschikbaar, 
-       waaronder C #, Python en een paar visuele scripttalen die geweldig zijn als je absoluut geen programmeerervaring hebt.
+       waaronder C#, Python en een paar visuele scripttalen die geweldig zijn als je absoluut geen programmeerervaring hebt.
     </p>
     <!-- Weetje 5-->
     <h2>5. Wat zit er in een Arduino Starter Kit?</h2>
