--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Header -->
 <div class="header">
     <h1>Home</h1>
-    <p>With a <b>flexible</b> layout.</p>
+    <p>Home pagina</p>
 </div>
 
 <!-- Navigation Bar -->
