--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
 <!-- Header -->
 <div class="header">
     <h1>Contact</h1>
-    <p>With a <b>flexible</b> layout.</p>
+    <p>Contact pagina</p>
 </div>
 
 <!-- Navigation Bar -->
