--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <div class="main">
     <h2>Arduino Internet Of Things</h2>
     <h5>
-        Als je op zoek gaat naar leuke elektronische projecten op het internet kom je niet onder de naam Arduino uit.
-        Het opensource systeem wordt onder andere gebruikt voor Internet-of-Things-toepassingen, robots en leuke DIY-projecten.
+        Als je op zoek gaat naar leuke elektronische projecten op het internet kom je niet onder de naam Arduino uit.<br>
+        Het opensource systeem wordt onder andere gebruikt voor Internet-of-Things-toepassingen, robots en leuke DIY-projecten.<br>
         Wat is Arduino nu precies en waarom is het zo leuk om te experimenteren met dit voordelige systeem?
     </h5>
   </div>
