--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,6 +22,9 @@
   <a href="overons.html">Over ons</a>
 </div>
 
+<!--contact us-->
+<img src="../media/contact-us.png">
+
 <!-- The flexible grid (content) -->
 <div class="row">
   <div class="main">
