--- a/pages/overons.html
+++ b/pages/overons.html
@@ -22,6 +22,9 @@
     <a href="overons.html">Over ons</a>
 </div>
 
+<!--about us-->
+<img src="../media/aboutus.png">
+
 <!-- The flexible grid (content) -->
 <!--
   Over Oscar
