--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 <!-- Header -->
@@ -21,6 +22,9 @@
   <a href="pages/contact.html">Contact</a>
   <a href="pages/overons.html">Over ons</a>
 </div>
+
+<!--arduino IoT-->
+<img src="media/arduino IoT.png" class="IoT">
 
 <!-- The flexible grid (content) -->
 <div class="row">
