--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -22,6 +22,9 @@
     <a href="overons.html">Over ons</a>
 </div>
 
+<!--tutorials-->
+<img src="../media/tutorials.png">
+
 <!-- The flexible grid (content) -->
 <div class="row">
   <div class="main">
