--- a/pages/weetjes.html
+++ b/pages/weetjes.html
@@ -22,6 +22,9 @@
     <a href="overons.html">Over ons</a>
 </div>
 
+<!-- did you know -->
+<img src="../media/did you know.png">
+
 <!-- The flexible grid (content) -->
 <div class="row">
   <!-- Main -->
