laatste dingen gefixed in de website

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <!--arduino IoT-->
-<img src="media/arduino IoT.png" class="IoT">
+<img src="media/internet-of-things-600x270.png" class="topFoto">
 
 <!-- The flexible grid (content) -->
 <div class="row">
