--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
 </div>
 
 <!--contact us-->
-<img src="../media/contact-us.png">
+<img src="../media/contact us.png" class="topFoto">
 
 <!-- The flexible grid (content) -->
 <div class="row">
