--- a/pages/overons.html
+++ b/pages/overons.html
@@ -23,7 +23,7 @@
 </div>
 
 <!--about us-->
-<img src="../media/aboutus.png">
+<img src="../media/aboutus.png" class="topFoto">
 
 <!-- The flexible grid (content) -->
 <!--
