--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -23,7 +23,7 @@
 </div>
 
 <!--tutorials-->
-<img src="../media/tutorials.png">
+<img src="../media/tutorials.png" class="topFoto">
 
 <!-- The flexible grid (content) -->
 <div class="row">
