--- a/pages/weetjes.html
+++ b/pages/weetjes.html
@@ -23,7 +23,7 @@
 </div>
 
 <!-- did you know -->
-<img src="../media/did you know.png">
+<img src="../media/did you know.png" class="topFoto">
 
 <!-- The flexible grid (content) -->
 <div class="row">
